fixed footer spacing issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -122,12 +122,14 @@
     font-size: 80px;
     max-width:100%;
     text-decoration: none;
+    width: 100%;
 }
 
 #footer-maps{
     text-decoration: none;
     justify-content: center;
     float: left;
+    width: 33%;
 }
 
 #footer-maps:link {
@@ -149,6 +151,7 @@
 #footer-home {
     text-decoration: none;
     justify-content: center;
+    width: 33%;
 }
 
 #footer-home:link {
@@ -171,6 +174,7 @@
     text-decoration: none;
     justify-content: center;
     float: right;
+    width: 33%;
 }
 
 #footer-events:link {
